# BBB-To-Go

./: .config  .gitmodules  LICENSE  README.md  setup_all.sh
lvgl_app/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.cpp
rauc/: demo.key.pem
